[package]
name = "cap"
version = "0.1.0"
edition = "2021"
authors = ["Security Research Team"]
description = "A research-oriented security orchestration framework for defensive security research and authorized testing"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
trust-dns-resolver = "0.23"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-trait = "0.1"
futures = "0.3"
dashmap = "5.5"
regex = "1.10"
ipnetwork = "0.20"
sha2 = "0.10"
whoami = "1.4"
crossterm = "0.28"
ratatui = "0.29"
bytes = "1.10"
urlencoding = "2.1"
if-addrs = "0.13"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[dev-dependencies]
mockito = "1.2"

[[bin]]
name = "cap"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

